finally stopped the images preading out so far by using max width fit contnet and giving a gap

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ h1 {
 .logo1 {
     width: 150px;
     height: auto;
+
 }
 
 .heading-container {
@@ -34,16 +35,18 @@ h1 {
 .photo-content {
     display: flex;
     justify-content: center;
-    flex: 1;
-
+    flex: 1 1 auto;
+    flex-wrap: wrap;
+    max-width: fit-content;
+    gap: 2rem;
+    padding-top: 1rem;
 }
 
 .item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 1;
-    padding-top: 1rem;
+    flex: 1 1 auto;
     gap: 20px;
 }
 
